
## Makefile.am -- Process this file with automake to produce Makefile.in
SUBDIRS = GCC MemMang
AM_CFLAGS=-O3 -mcpu=cortex-m4 -mthumb -Wall -Wpointer-arith -Wstrict-prototypes -Winline -Wundef -g -I$(top_srcdir)/STM32F4xx_HAL_Driver/inc -I$(top_srcdir)/inc
AM_CPPFLAGS =-O3 -mcpu=cortex-m4 -mthumb -ffunction-sections -fdata-sections  -fno-exceptions -I$(top_srcdir)/tvc-macros -I$(top_srcdir)/STM32F4xx_HAL_Driver/inc  
